Menambahkan gambar maps

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <main>
       <div class="main-container">
         <div class="main">
-          <img src="img/backgroundWeb.jpg" alt="map-pv-lamp" />
+          <img src="img/" alt="map-pv-lamp" />
         </div>
         <div class="aside">
           <div class="card">
