--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
           <div class="card">
             <h2>Status Lampu 1</h2>
             <div class="battery">
-              <h3>Full</h3>
+              <h3>ON</h3>
             </div>
             <div class="vc-status">
               <div class="volt">
@@ -37,7 +37,7 @@
           <div class="card">
             <h2>Status Lampu 2</h2>
             <div class="battery">
-              <h3>Full</h3>
+              <h3>OFF</h3>
             </div>
             <div class="vc-status">
               <div class="volt">
@@ -51,7 +51,7 @@
           <div class="card">
             <h2>Status Lampu 3</h2>
             <div class="battery">
-              <h3>Full</h3>
+              <h3>OFF</h3>
             </div>
             <div class="vc-status">
               <div class="volt">
@@ -65,7 +65,7 @@
           <div class="card">
             <h2>Status Lampu 4</h2>
             <div class="battery">
-              <h3>Full</h3>
+              <h3>OFF</h3>
             </div>
             <div class="vc-status">
               <div class="volt">
@@ -79,7 +79,7 @@
           <div class="card">
             <h2>Status Lampu 5</h2>
             <div class="battery">
-              <h3>Full</h3>
+              <h3>OFF</h3>
             </div>
             <div class="vc-status">
               <div class="volt">
