--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
       </div>
     </nav>
     <main>
-      <div class="main-container" id="dashboard-field">
+      <div class="main-container hidden" id="dashboard-field">
         <div class="main">
           <!-- Tempat gambar -->
         </div>
@@ -195,9 +195,46 @@
           </table>
         </div>
       </div>
+      <div class="current-container" id="current-field">
+        <div class="current-header">
+          <div class="title">
+            <h3>Current</h3>
+          </div>
+          <div class="buttons">
+            <ul>
+              <li>
+                <a href="#"
+                  ><span id="icon-download"
+                    ><img src="assets/download.svg" alt="download" /></span
+                  >Download</a
+                >
+              </li>
+              <li>
+                <a href="#"
+                  ><span id="icon-filter"
+                    ><img src="assets/filter.svg" alt="filter" /></span
+                  >Filter</a
+                >
+              </li>
+            </ul>
+          </div>
+        </div>
+        <div class="current-content">
+          <div class="container-graph">
+            <canvas id="myGraph"></canvas>
+          </div>
+          <div class="container-bottom">
+            <div class="firstDetail">
+              <h4>test</h4>
+            </div>
+            <div class="secondDetail"><h4>test</h4></div>
+          </div>
+        </div>
+      </div>
     </main>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src="javascript/voltage.js"></script>
+    <script src="javascript/current.js"></script>
     <script src="javascript/script.js"></script>
   </body>
 </html>
