Menambahkan animasi sedikit pada li saat active

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         </div>
         <div class="navbar-list">
           <ul>
-            <li id="dashboard" class="active">
+            <li id="dashboard">
               <a href="#"
                 ><span id="icon-dashboard"
                   ><img src="assets/dashboard.svg" alt="dashboard"
@@ -192,6 +192,34 @@
               <td>Wednesday</td>
               <td><a href="#">Delete</a></td>
             </tr>
+            <tr>
+              <td>2</td>
+              <td>10.25</td>
+              <td>18 volt</td>
+              <td>Thursday</td>
+              <td><a href="#">Delete</a></td>
+            </tr>
+            <tr>
+              <td>3</td>
+              <td>10.30</td>
+              <td>22 volt</td>
+              <td>Friday</td>
+              <td><a href="#">Delete</a></td>
+            </tr>
+            <tr>
+              <td>4</td>
+              <td>10.10</td>
+              <td>16 volt</td>
+              <td>Saturday</td>
+              <td><a href="#">Delete</a></td>
+            </tr>
+            <tr>
+              <td>5</td>
+              <td>10.45</td>
+              <td>25 volt</td>
+              <td>Sunday</td>
+              <td><a href="#">Delete</a></td>
+            </tr>
           </table>
         </div>
       </div>
@@ -225,9 +253,60 @@
           </div>
           <div class="container-bottom">
             <div class="firstDetail">
-              <h4>test</h4>
+              <div class="table-container">
+                <table border="1px" cellspacing="0">
+                  <tr>
+                    <th>No</th>
+                    <th style="background-color: #eb5353; color: white">
+                      Time
+                    </th>
+                    <th style="background-color: #36ae7c; color: white">
+                      Current
+                    </th>
+                    <th style="background-color: #187498; color: white">Day</th>
+                    <th>Delete</th>
+                  </tr>
+                  <tr>
+                    <td>1</td>
+                    <td>10.00</td>
+                    <td>15 ampere</td>
+                    <td>Wednesday</td>
+                    <td><a href="#">Delete</a></td>
+                  </tr>
+                  <tr>
+                    <td>2</td>
+                    <td>10.25</td>
+                    <td>18 ampere</td>
+                    <td>Thursday</td>
+                    <td><a href="#">Delete</a></td>
+                  </tr>
+                  <tr>
+                    <td>3</td>
+                    <td>10.30</td>
+                    <td>16 ampere</td>
+                    <td>Friday</td>
+                    <td><a href="#">Delete</a></td>
+                  </tr>
+                  <tr>
+                    <td>4</td>
+                    <td>10.10</td>
+                    <td>17 ampere</td>
+                    <td>Saturday</td>
+                    <td><a href="#">Delete</a></td>
+                  </tr>
+                  <tr>
+                    <td>5</td>
+                    <td>10.45</td>
+                    <td>15 ampere</td>
+                    <td>Sunday</td>
+                    <td><a href="#">Delete</a></td>
+                  </tr>
+                </table>
+              </div>
             </div>
-            <div class="secondDetail"><h4>test</h4></div>
+            <div class="secondDetail">
+              <div class="container"></div>
+            </div>
           </div>
         </div>
       </div>
