Membuat default awal dahsboard menjadi active dan not hidden

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         </div>
         <div class="navbar-list">
           <ul>
-            <li id="dashboard">
+            <li id="dashboard" class="active">
               <a href="#"
                 ><span id="icon-dashboard"
                   ><img src="assets/dashboard.svg" alt="dashboard"
@@ -72,7 +72,7 @@
       </div>
     </nav>
     <main>
-      <div class="main-container hidden" id="dashboard-field">
+      <div class="main-container" id="dashboard-field">
         <div class="main">
           <!-- Tempat gambar -->
         </div>
@@ -223,7 +223,7 @@
           </table>
         </div>
       </div>
-      <div class="current-container" id="current-field">
+      <div class="current-container hidden" id="current-field">
         <div class="current-header">
           <div class="title">
             <h3>Current</h3>
