--- a/index.html
+++ b/index.html
@@ -310,6 +310,31 @@
           </div>
         </div>
       </div>
+      <div class="reports-container hidden" id="reports-field">
+        <div class="reports-header">
+          <div class="title">
+            <h3>Reports</h3>
+          </div>
+          <div class="buttons">
+            <ul>
+              <li>
+                <a href="#"
+                  ><span id="icon-download"
+                    ><img src="assets/download.svg" alt="download" /></span
+                  >Download</a
+                >
+              </li>
+              <li>
+                <a href="#"
+                  ><span id="icon-filter"
+                    ><img src="assets/filter.svg" alt="filter" /></span
+                  >Filter</a
+                >
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
     </main>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src="javascript/voltage.js"></script>
