Menambahkan tabel di halaman reports

--- a/index.html
+++ b/index.html
@@ -334,6 +334,67 @@
             </ul>
           </div>
         </div>
+        <div class="reports-content">
+          <div class="firstReport">
+            <div class="table-container">
+              <table border="1px" cellspacing="0">
+                <tr>
+                  <th>No</th>
+                  <th style="background-color: #eb5353; color: white">Time</th>
+                  <th style="background-color: #36ae7c; color: white">
+                    Voltage
+                  </th>
+                  <th style="background-color: #36ae7c; color: white">
+                    Current
+                  </th>
+                  <th style="background-color: #187498; color: white">Day</th>
+                  <th>Condition</th>
+                </tr>
+                <tr>
+                  <td>1</td>
+                  <td>10.00</td>
+                  <td>20 volt</td>
+                  <td>20 volt</td>
+                  <td>Wednesday</td>
+                  <td>Normal</td>
+                </tr>
+                <tr>
+                  <td>2</td>
+                  <td>10.25</td>
+                  <td>18 volt</td>
+                  <td>20 volt</td>
+                  <td>Thursday</td>
+                  <td>Normal</td>
+                </tr>
+                <tr>
+                  <td>3</td>
+                  <td>10.30</td>
+                  <td>22 volt</td>
+                  <td>20 volt</td>
+                  <td>Friday</td>
+                  <td>Normal</td>
+                </tr>
+                <tr>
+                  <td>4</td>
+                  <td>10.10</td>
+                  <td>16 volt</td>
+                  <td>20 volt</td>
+                  <td>Saturday</td>
+                  <td>Normal</td>
+                </tr>
+                <tr>
+                  <td>5</td>
+                  <td>10.45</td>
+                  <td>25 volt</td>
+                  <td>20 volt</td>
+                  <td>Sunday</td>
+                  <td>Normal</td>
+                </tr>
+              </table>
+            </div>
+          </div>
+          <div class="secondReport"></div>
+        </div>
       </div>
     </main>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
